--- a/package.json
+++ b/package.json
@@ -6,204 +6,204 @@
 		"test": "test"
 	},
 	"dependencies": {
+		"abstract-leveldown": "^2.6.3",
 		"aes-js": "^3.1.2",
-		"async": "^2.6.3",
-		"asn1": "^0.2.6",
-		"async-eventemitter": "^0.2.4",
-		"assert-plus": "^1.0.0",
-		"async-limiter": "^1.0.1",
 		"ajv": "^6.12.6",
 		"ansi-styles": "^3.2.1",
-		"asynckit": "^0.4.0",
-		"aws4": "^1.11.0",
-		"aws-sign2": "^0.7.0",
-		"babel-plugin-polyfill-corejs2": "^0.3.1",
+		"asn1": "^0.2.6",
+		"assert-plus": "^1.0.0",
+		"async": "^2.6.3",
+		"async-eventemitter": "^0.2.4",
+		"async-limiter": "^1.0.1",
 		"async-mutex": "^0.2.6",
+		"asynckit": "^0.4.0",
+		"aws-sign2": "^0.7.0",
+		"aws4": "^1.11.0",
+		"babel-plugin-polyfill-corejs2": "^0.3.1",
 		"babel-plugin-polyfill-corejs3": "^0.5.2",
-		"backoff": "^2.5.0",
-		"abstract-leveldown": "^2.6.3",
-		"blakejs": "^1.1.1",
-		"bcrypt-pbkdf": "^1.0.2",
 		"babel-plugin-polyfill-regenerator": "^0.3.1",
-		"brorand": "^1.1.0",
+		"backoff": "^2.5.0",
+		"base-x": "^3.0.9",
+		"bcrypt-pbkdf": "^1.0.2",
+		"blakejs": "^1.1.1",
 		"bn.js": "^4.12.0",
-		"browserslist": "^4.19.1",
+		"brorand": "^1.1.0",
 		"browserify-aes": "^1.2.0",
+		"browserslist": "^4.19.1",
 		"bs58": "^4.0.1",
+		"bs58check": "^2.1.2",
 		"btoa": "^1.2.1",
 		"buffer-xor": "^1.0.3",
-		"bs58check": "^2.1.2",
-		"base-x": "^3.0.9",
 		"caniuse-lite": "^1.0.30001307",
 		"caseless": "^0.12.0",
-		"cipher-base": "^1.0.4",
-		"checkpoint-store": "^1.1.0",
 		"chalk": "^2.4.2",
+		"checkpoint-store": "^1.1.0",
+		"cipher-base": "^1.0.4",
 		"clone": "^2.1.2",
 		"color-convert": "^1.9.3",
 		"color-name": "^1.1.3",
 		"combined-stream": "^1.0.8",
 		"convert-source-map": "^1.8.0",
-		"crc-32": "^1.2.1",
 		"core-js-compat": "^3.21.0",
-		"cross-fetch": "^2.2.5",
 		"core-util-is": "^1.0.2",
+		"crc-32": "^1.2.1",
 		"create-hash": "^1.2.0",
-		"debug": "^4.3.3",
-		"dashdash": "^1.14.1",
-		"deferred-leveldown": "^1.2.2",
-		"dom-walk": "^0.1.2",
-		"delayed-stream": "^1.0.0",
 		"create-hmac": "^1.1.7",
+		"cross-fetch": "^2.2.5",
+		"dashdash": "^1.14.1",
+		"debug": "^4.3.3",
+		"deferred-leveldown": "^1.2.2",
+		"delayed-stream": "^1.0.0",
+		"dom-walk": "^0.1.2",
 		"ecc-jsbn": "^0.1.2",
 		"electron-to-chromium": "^1.4.65",
 		"elliptic": "^6.5.4",
+		"errno": "^0.1.8",
 		"escalade": "^3.1.1",
 		"escape-string-regexp": "^1.0.5",
 		"eth-block-tracker": "^4.4.3",
+		"eth-json-rpc-filters": "^4.2.2",
 		"eth-json-rpc-infura": "^5.1.0",
+		"eth-json-rpc-middleware": "^6.0.0",
 		"eth-query": "^2.1.2",
-		"errno": "^0.1.8",
+		"eth-rpc-errors": "^3.0.0",
 		"eth-sig-util": "^3.0.1",
 		"ethereum-common": "^0.2.0",
-		"eth-rpc-errors": "^3.0.0",
-		"ethereum-protocol": "^1.0.1",
 		"ethereum-cryptography": "^0.1.3",
-		"eth-json-rpc-filters": "^4.2.2",
-		"eth-json-rpc-middleware": "^6.0.0",
+		"ethereum-protocol": "^1.0.1",
 		"ethereumjs-abi": "^0.6.8",
 		"ethereumjs-account": "^2.0.5",
-		"ethereumjs-tx": "^1.3.7",
+		"ethereumjs-block": "^1.7.1",
 		"ethereumjs-common": "^1.5.2",
+		"ethereumjs-tx": "^1.3.7",
 		"ethereumjs-util": "^6.2.1",
-		"ethereumjs-wallet": "^1.0.2",
 		"ethereumjs-vm": "^2.6.0",
-		"events": "^3.3.0",
-		"exit-on-epipe": "^1.0.1",
+		"ethereumjs-wallet": "^1.0.2",
 		"ethjs-util": "^0.1.6",
+		"events": "^3.3.0",
 		"evp_bytestokey": "^1.0.3",
+		"exit-on-epipe": "^1.0.1",
 		"extend": "^3.0.2",
 		"extsprintf": "^1.3.0",
-		"ethereumjs-block": "^1.7.1",
-		"fast-deep-equal": "^3.1.3",
-		"fast-safe-stringify": "^2.1.1",
 		"fake-merkle-patricia-tree": "^1.0.1",
+		"fast-deep-equal": "^3.1.3",
+		"fast-json-stable-stringify": "^2.1.0",
+		"fast-safe-stringify": "^2.1.1",
 		"forever-agent": "^0.6.1",
+		"form-data": "^2.3.3",
 		"function-bind": "^1.1.1",
 		"functional-red-black-tree": "^1.0.1",
-		"form-data": "^2.3.3",
-		"har-schema": "^2.0.0",
-		"fast-json-stable-stringify": "^2.1.0",
 		"gensync": "^1.0.0-beta.2",
+		"getpass": "^0.1.7",
 		"global": "^4.4.0",
+		"globals": "^11.12.0",
+		"har-schema": "^2.0.0",
 		"har-validator": "^5.1.5",
 		"has": "^1.0.3",
 		"has-flag": "^3.0.0",
 		"hash-base": "^3.1.0",
-		"globals": "^11.12.0",
 		"hash.js": "^1.1.7",
-		"getpass": "^0.1.7",
+		"hmac-drbg": "^1.0.1",
 		"http-signature": "^1.2.0",
 		"immediate": "^3.3.0",
+		"inherits": "^2.0.4",
 		"is-core-module": "^2.8.1",
 		"is-fn": "^1.0.0",
 		"is-function": "^1.0.2",
-		"inherits": "^2.0.4",
+		"is-hex-prefixed": "^1.0.0",
 		"is-typedarray": "^1.0.0",
 		"isarray": "^0.0.1",
 		"isstream": "^0.1.2",
 		"js-tokens": "^4.0.0",
 		"jsbn": "^0.1.1",
-		"hmac-drbg": "^1.0.1",
-		"json-rpc-engine": "^6.1.0",
-		"is-hex-prefixed": "^1.0.0",
-		"json-rpc-random-id": "^1.0.1",
 		"jsesc": "^2.5.2",
+		"json-rpc-engine": "^6.1.0",
+		"json-rpc-random-id": "^1.0.1",
+		"json-schema": "^0.4.0",
 		"json-schema-traverse": "^0.4.1",
 		"json-stable-stringify": "^1.0.1",
 		"json-stringify-safe": "^5.0.1",
-		"json-schema": "^0.4.0",
 		"json5": "^2.2.0",
 		"jsonify": "^0.0.0",
 		"jsprim": "^1.4.2",
 		"keccak": "^3.0.2",
 		"level-codec": "^7.0.1",
-		"level-ws": "^0.0.0",
+		"level-errors": "^1.0.5",
 		"level-iterator-stream": "^1.3.1",
+		"level-ws": "^0.0.0",
 		"levelup": "^1.3.9",
 		"lodash": "^4.17.21",
-		"ltgt": "^2.2.1",
 		"lodash.debounce": "^4.0.8",
-		"level-errors": "^1.0.5",
+		"ltgt": "^2.2.1",
+		"md5.js": "^1.3.5",
 		"memdown": "^1.4.1",
 		"merkle-patricia-tree": "^2.3.2",
 		"mime-db": "^1.51.0",
-		"md5.js": "^1.3.5",
 		"mime-types": "^2.1.34",
+		"min-document": "^2.19.0",
 		"minimalistic-assert": "^1.0.1",
 		"minimalistic-crypto-utils": "^1.0.1",
+		"minimist": "^1.2.5",
 		"ms": "^2.1.2",
-		"min-document": "^2.19.0",
+		"node-addon-api": "^2.0.2",
 		"node-fetch": "^2.6.1",
+		"node-gyp-build": "^4.3.0",
 		"node-releases": "^2.0.1",
 		"oauth-sign": "^0.9.0",
-		"node-addon-api": "^2.0.2",
 		"object-keys": "^0.4.0",
-		"node-gyp-build": "^4.3.0",
-		"path-parse": "^1.0.7",
 		"parse-headers": "^2.0.4",
-		"minimist": "^1.2.5",
-		"performance-now": "^2.1.0",
+		"path-parse": "^1.0.7",
 		"pbkdf2": "^3.1.2",
+		"performance-now": "^2.1.0",
 		"picocolors": "^1.0.0",
 		"pify": "^3.0.0",
-		"printj": "^1.3.1",
-		"process-nextick-args": "^2.0.1",
 		"precond": "^0.2.3",
+		"printj": "^1.3.1",
 		"process": "^0.11.10",
+		"process-nextick-args": "^2.0.1",
 		"promise-to-callback": "^1.0.0",
-		"punycode": "^2.1.1",
+		"prr": "^1.0.1",
 		"psl": "^1.8.0",
-		"randombytes": "^2.1.0",
+		"punycode": "^2.1.1",
 		"qs": "^6.5.3",
-		"regenerator-runtime": "^0.13.9",
+		"randombytes": "^2.1.0",
 		"readable-stream": "^3.6.0",
+		"regenerator-runtime": "^0.13.9",
 		"request": "^2.88.2",
 		"resolve": "^1.22.0",
-		"rlp": "^2.2.7",
-		"safe-buffer": "^5.2.1",
 		"ripemd160": "^2.0.2",
+		"rlp": "^2.2.7",
 		"rustbn.js": "^0.2.0",
+		"safe-buffer": "^5.2.1",
 		"safe-event-emitter": "^1.0.1",
-		"prr": "^1.0.1",
+		"safer-buffer": "^2.1.2",
 		"scrypt-js": "^3.0.1",
 		"secp256k1": "^4.0.3",
-		"semver": "^6.3.0",
-		"safer-buffer": "^2.1.2",
 		"semaphore": "^1.1.0",
+		"semver": "^6.3.0",
 		"set-immediate-shim": "^1.0.1",
-		"sha.js": "^2.4.11",
 		"setimmediate": "^1.0.5",
+		"sha.js": "^2.4.11",
 		"source-map": "^0.5.7",
+		"sshpk": "^1.17.0",
 		"string_decoder": "^1.3.0",
 		"strip-hex-prefix": "^1.0.0",
 		"supports-color": "^5.5.0",
 		"supports-preserve-symlinks-flag": "^1.0.0",
+		"to-fast-properties": "^2.0.0",
 		"tough-cookie": "^2.5.0",
 		"tslib": "^2.3.1",
-		"sshpk": "^1.17.0",
-		"tweetnacl": "^1.0.3",
 		"tunnel-agent": "^0.6.0",
-		"to-fast-properties": "^2.0.0",
+		"tweetnacl": "^1.0.3",
 		"tweetnacl-util": "^0.15.1",
 		"uri-js": "^4.4.1",
 		"utf8": "^3.0.0",
+		"util-deprecate": "^1.0.2",
 		"uuid": "^8.3.2",
 		"verror": "^1.10.0",
-		"ws": "^5.2.3",
-		"util-deprecate": "^1.0.2",
-		"whatwg-fetch": "^2.0.4",
 		"web3-provider-engine": "^16.0.3",
+		"whatwg-fetch": "^2.0.4",
+		"ws": "^5.2.3",
 		"xhr": "^2.6.0",
 		"xtend": "^4.0.2"
 	},
@@ -212,7 +212,8 @@
 	},
 	"devDependencies": {
 		"@openzeppelin/contracts": "^4.4.2",
-		"@truffle/hdwallet-provider": "^2.0.3"
+		"@truffle/hdwallet-provider": "^2.0.3",
+		"truffle-plugin-verify": "^0.5.21"
 	},
 	"repository": {
 		"type": "git",
